Bug 165448 - LibreOffice does not support macOS window-snap keyboard shortcuts
Summary: LibreOffice does not support macOS window-snap keyboard shortcuts
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: ARM macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:25.8.0 inReleaseNotes:25.8
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-26 05:28 UTC by Kamil Majewski
Modified: 2025-05-11 17:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Snapshot of macOS menu items in LibreOffice's windows menu (347.59 KB, image/png)
2025-04-06 21:22 UTC, Patrick (volunteer)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Majewski 2025-02-26 05:28:51 UTC
Description:
macOS has window snapping shorcuts now in the form fn+control+ArrowKey. Manual window snapping using the mouse works.

Alacritty not working with these shortcuts led me to switch to Kitty, so suffice it to say this is a big deal to mac users.

Steps to Reproduce:
1. Use window-snapping shortcut

Actual Results:
Window stays in place

Expected Results:
Window snaps into desired position


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.3 (AARCH64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 10; OS: macOS 15.3.1; UI render: Skia/Metal; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded
Comment 1 Alex Thurgood 2025-02-26 08:25:09 UTC
Confirming with 

Version: 25.2.0.3 (AARCH64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 8; OS: macOS 15.3.1; UI render: Skia/Raster; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 2 Patrick (volunteer) 2025-04-06 21:22:49 UTC
Created attachment 200187 [details]
Snapshot of macOS menu items in LibreOffice's windows menu

I have created the following experimental patch that seems to work:

https://gerrit.libreoffice.org/c/core/+/183762

I still need to see if I can figure out why the macOS menu items in the windows menu do not do anything when a LibreOffice dialog window is displayed.
Comment 3 Patrick (volunteer) 2025-04-06 23:39:17 UTC
Note: I noticed that the Start Center does not have a windows menu so none of the macOS menu items will added for the Start Center.

Unfortunately, I don't have any idea how to add a windows menu in the Start Center's C++ code so we may be stuck with that. At least it should work for Writer, Calc, Impress, etc. document windows so hopefully that's better than nothing.
Comment 4 Commit Notification 2025-04-08 15:43:21 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98ca580e910d23bb7933fa39e6907900f9a4b651

tdf#165448 Allow macOS to add menu items in LibreOffice windows menu

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Patrick (volunteer) 2025-04-08 15:45:51 UTC
I have committed a fix for this bug and the fix should be in tomorrow's (09 April 2025) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does *not* overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 6 Commit Notification 2025-04-28 01:26:54 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4eb737f07d85fcc583dffefb0d5489d859690ae

Related: tdf#165448 move parent window to front after closing window

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.