tdf#165448 Allow macOS to add menu items in LibreOffice windows menu

macOS will automatically insert menu items in NSApp's windows menu
so set that menu to LibreOffice's windows menu.

Note: while this native feature works with document windows, there
are two cases where this feature is not available:

- The Start Center has no windows menu so none of the menu items
  that macOS inserts will be inserted.

- For some unkown reason, none of the menu items that macOS inserts
  into the windows menu work if the key window is a native child
  window of another window. Unfortunately, LibreOffice depends on
  a dialog window being a native child window of its parent window
  to mimic native modal dialogs so hide all the those menu items
  when a native child window has focus.

Change-Id: Ie73711be479ef71d6aa62e6e8651c248afb8c252
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183762
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>